--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@ https://templatemo.com/tm-538-digital-trend
         <div class="container">
             <a class="navbar-brand" href="index.html">
               <i class="fa fa-recycle"></i>
-              Recyling Quiz
+              Recycling Quiz
             </a>
 
             <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -74,7 +74,7 @@ https://templatemo.com/tm-538-digital-trend
 
                                    <!-- <a href="contact.html" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Let us discuss together!</a> -->
 
-                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-hourglass mr-2"></i> Coming Soon</strong>
+                                   <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-hourglass mr-2"></i> Coming Soon...</strong>
                               </div>
                         </div>
 
