--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@ https://templatemo.com/tm-538-digital-trend
 
                                    <h1 class="text-white" data-aos="fade-up">A simple educational and fun application to raise ecological awareness :)</h1>
 
-                                   <a href="/quiz" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Start Quiz</a>
+                                   <!-- <a href="/quiz" class="custom-btn btn-bg btn mt-3" data-aos="fade-up" data-aos-delay="100">Start Quiz</a> -->
 
                                    <strong class="d-block py-3 pl-5 text-white" data-aos="fade-up" data-aos-delay="200"><i class="fa fa-hourglass mr-2"></i> Coming Soon...</strong>
                               </div>
