--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -36,7 +36,7 @@
   <div class="container">
     <div id="quiz">
       <div id="quiz-header">
-        <h3>Πάρτε τον χρόνο σας και προσπαθείστε να απαντήσετε όσο το δυνατόν περισσότερες ερωτήσεις!</h3>
+        <h3>Πάρτε τον χρόνο σας και προσπαθήστε να απαντήσετε όσο το δυνατόν περισσότερες ερωτήσεις!</h3>
       </div>
       <div id="quiz-start-screen">
         <p><a href="#" id="quiz-start-btn" class="quiz-button">Πάμε</a></p>
